<resources>
    <string name="app_name">Communify</string>
    <string name="anonimo">Unknown</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="comunidades">Communities</string>
    <string name="loginToastLoginfail">Login failed!</string>
    <string name="mainDialogPedirPerfilTitulo">Please, give us your name:</string>
    <string name="mainDialogPedirPerfilToast">Your name is set to: </string>
    <string name="mainNoComsTexto1">Seems like you are not a member of a community yet.</string>
    <string name="mainNoComsTexto2">Please click on menu button to join one or create your own.</string>
    <string name="mainAddAnuncio">Create a post</string>
    <string name="mainAddAnuncio1">Post title</string>
    <string name="mainAddAnuncio2">Post body</string>
    <string name="wizar_anuncio_step1_TextView_ofreces_necesitas">Offer or Need?</string>
    <string name="wizar_anuncio_step1_radiobutton_ofrecer">I offer</string>
    <string name="wizar_anuncio_step1_radiobutton_necesitar">I Need</string>
    <string name="wizar_anuncio_step2_TextView_anuncio_titulo">Set the ads title ...</string>
    <string name="wizar_anuncio_step2_EditText_description">Description</string>
    <string name="wizar_anuncio_step2_Text_View_descrip">... and a short description.</string>
    <string name="wizar_anuncio_step3_TextView_calendar">Selec a date ...</string>
    <string name="wizar_anuncio_step4_TextView_seleccion_hora">Selec the time ...</string>
    <string name="wizar_anuncio_step5_TextView_elige_Com">Choose your community for this ad</string>
    <string name="wizar_anuncio_back_button">Back</string>
    <string name="wizar_anuncio_next_button">Next</string>
    <string name="wizar_anuncio_step5_bt_crearAnuncio">CREATE AD</string>
    <string name="wizar_anuncio_step2_EditTex_titulo_anuncio">Title</string>
    <string name="wizar_anuncio_step_EditTex_text_descripcion">Description</string>
    <string name="activity_registrar_EditTex_usuario">User Name</string>
    <string name="activity_registrar_EditTex_contraseña">Password</string>
    <string name="activity_registrar_btn_contraseña">Create Acount</string>
    <string name="anuncio_btn_cerrar">Close</string>
    <string name="anuncio_btn_aceptar">Acept</string>
    <string name="login_EditTex_usuario">User Name</string>
    <string name="login_EditTex_contraseña">Password</string>
    <string name="login_btn_entrar">Log In</string>
    <string name="login_btn_registrar">Sign Up</string>
    <string name="ofreces_buscas">Offer or Need?</string>
    <string name="radiobutton_ofrecer">I OFFER</string>
    <string name="radiobutton_necesitar">I NEED</string>
    <string name="anuncio_titulo">Set a title for your ad ...</string>
    <string name="description">Descripcion</string>
    <string name="descrip">... and a short description.</string>
    <string name="textview_calendar">Choose a date ...</string>
    <string name="text_seleccion_hora">Choose an icon ...</string>
    <string name="text_view_elige_Com">Choose the community for your ad</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="next_button2">Finished</string>
    <string name="bt_crearAnuncio">SET AD</string>
    <string name="titulo_anuncio">Title</string>
    <string name="text_descripcion">Description</string>
    <string name="AddComunidad_nombre_comunidad">Comunity Name</string>
    <string name="AddComunidad_tv_nombre">Which name do you want to set in your community?</string>
    <string name="AddComunidad_tv_descripcion">Do you want to set a short description about your community?</string>
    <string name="AddComunidad_descripcion_comunidad">Community Description</string>
    <string name="AddComunidad_crear_comunidad">CREATE COMMUNITY</string>
    <string name="mainDialogEntrarComunidad">Join a community</string>
    <string name="activity_registrar_EditTex_contraseña2">Confirm Password</string>
    <string name="passwords_doesnt_match">Passwords doesn\'t match!</string>
    <string name="wizard_anuncio01_addinganuncio">ADDING AD...</string>
    <string name="wizard_anuncio01_step01">STEP 1 OF 4</string>
    <string name="wizard_anuncio02_step2">STEP 2 OF 4</string>
    <string name="wizard_anuncio02_eligeCom">Choose community</string>
    <string name="wizard_anuncio03_step3">STEP 3 OF 4</string>
    <string name="wizard_anuncio03_bt_saltar">SKIP STEP</string>
    <string name="wizard_anuncio03_step4">STEP 4 OF 4</string>
    <string name="wizard_com01_step1">STEP 1 OF 2</string>
    <string name="wizard_com_adding">ADDING COMMUNITY...</string>
    <string name="wizard_com02_step2">STEP 2 OF 2</string>
    <string name="joined_community">Welcome to the community:</string>
    <string name="tv_pin">Please, enter a pin number for this Community</string>
    <string name="joinComunidad_tv_elige">Choose a community</string>
    <string name="joinComunidad_btn_entar">Join</string>
    <string name="sjhz_tv_tituloAnuncio">Ad´s title</string>
    <string name="sjhz_et_tituloAnuncio">Title</string>
    <string name="sjhz_tv_descripcionAnuncio">Ad´s description</string>
    <string name="sjhz_et_descripcionAnuncio">Description</string>
    <string name="sjhz_tv_eligeComunidad">Choose a community</string>
    <string name="select_expire_date">Select expire date</string>
    <string name="create_community_op">Create new community</string>
    <string name="join_community_op">Join existing community</string>
    <string name="exit_community_op">Leave community</string>
    <string name="profile_pic_op">Change profile picture</string>
    <string name="create_add_op">Create new ad</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
</resources>
