<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/fondo_wizard_comunidad"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_creandoAnuncio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/wizard_com_adding"
            android:textColor="@color/colorPrimary_tipografia_oscura"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_paso1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/wizard_com01_step1"
            android:textAlignment="textEnd"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/Nombrecom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/caviardreamsbold"
        android:text="@string/AddComunidad_tv_nombre"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <EditText
        android:id="@+id/et_nombre_comunidad"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:fontFamily="@font/caviardreamsbolditalic"
        android:hint="@string/AddComunidad_nombre_comunidad"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

</LinearLayout>