<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@drawable/splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#CCFFFFFF"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center_vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="280dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@android:drawable/ic_menu_info_details"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/activity_registrar_EditTex_usuario"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />



            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:background="#FFFFFF"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="280dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@android:drawable/ic_lock_lock"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/activity_registrar_EditTex_contraseña"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:background="#FFFFFF"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="280dp">

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@android:drawable/ic_lock_lock"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/activity_registrar_EditTex_contraseña2"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/btnhover"
                    android:text="@string/activity_registrar_btn_contraseña"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>