<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:background="@drawable/fondo_wizard_anuncio"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_creandoAnuncio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/wizard_anuncio01_addinganuncio"
            android:textColor="@color/colorAccent_tipografia_oscura"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_paso1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/wizard_anuncio02_step2"
            android:textAlignment="textEnd"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/caviardreams"
            android:paddingLeft="15dp"
            android:text="@string/wizar_anuncio_step2_TextView_anuncio_titulo"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="93dp">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/caviardreams"
                android:hint="Title"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@color/accent"
                android:textColorHighlight="@color/accent"
                android:textColorHint="@color/accent"
                android:textColorLink="@color/accent"
                android:textStyle="bold|italic" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/caviardreams"
            android:text="@string/wizar_anuncio_step2_Text_View_descrip"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.262" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColorHint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/caviardreams"
                android:hint="Description"
                android:inputType="textPersonName"
                android:maxLines="6"
                android:textStyle="bold|italic" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_elegirCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryLight"
            android:fontFamily="@font/caviardreamsbold"
            android:text="@string/wizard_anuncio02_eligeCom"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="398dp" />

        <Spinner
            android:id="@+id/spinner_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="482dp" />
    </LinearLayout>



</LinearLayout>